# gRPC-Guide

./: .gitignore  .gitmodules  CMakeLists.txt  buildlinux.sh  libs.cmake
async/asynclient/: CMakeLists.txt
async/asynclient/inc/: HelloClient.h  MsgProc.h
async/asynclient/src/: HelloClient.cxx  Main.cxx  MsgProc.cxx
async/client/: CMakeLists.txt
async/client/inc/: HelloClient.h
async/client/src/: HelloClient.cxx  Main.cxx
async/server/: CMakeLists.txt
async/server/inc/: HelloService.h  MsgProc.h
async/server/src/: HelloService.cxx  Main.cxx  MsgProc.cxx
protos/async/: async.proto
protos/guide/: hello.proto
protos/sync/: sync.proto
sync/client/: CMakeLists.txt
sync/client/inc/: HelloClient.h
sync/client/src/: HelloClient.cxx  Main.cxx
sync/server/: CMakeLists.txt
sync/server/inc/: HelloService.h
sync/server/src/: HelloService.cxx  Main.cxx
