CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
PROJECT(grpc-guide)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "_CMakePredefinedTargets")

INCLUDE(${CMAKE_SOURCE_DIR}/libs.cmake)

IF(BUILD_SYNC)
	ADD_SUBDIRECTORY(sync/client)
	ADD_SUBDIRECTORY(sync/server)
ENDIF(BUILD_SYNC)

IF(BUILD_ASYNC)
	ADD_SUBDIRECTORY(async/client)
	ADD_SUBDIRECTORY(async/asynclient)
	ADD_SUBDIRECTORY(async/server)
ENDIF(BUILD_ASYNC)